tests/checker/diagnostics/0133_adt_record_field_int_bool_02.ml.infer.expected
File "0133_adt_record_field_int_bool_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0133_adt_record_field_int_bool_02 is not a valid module name.

File "0133_adt_record_field_int_bool_02.ml", line 2, characters 29-33:
2 | let _ : rec_beta = { first = true; second = false }
                                 ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
